Changelog for mSearch2.

1.3.7 pl
==============
- [#38] Fixed placeholder "weight" of snippet mSearch2 when it used inside mFilter2.

1.3.6 pl
==============
- [mFilter2] Fixed bug with wrong suggestions on page reload.

1.3.5 pl
==============
- [mFilter2] Fixed handling of quotes in filters.

1.3.4 pl
==============
- [mFilter2] Improved boolean filter.

1.3.3 pl1
==============
- Updated version of pdoTools in the installer.

1.3.2 pl1
==============
- [mSearch2] Added new system option "mse2_index_all".
- [mSearch2] Added new system option "mse2_index_split_words".

1.3.1 pl
==============
- [mFilter2] Fixed "filter_key" placeholder in outer chunks.

1.3.0 pl
==============
- [mFilter2] Added filters "month" and "day".
- [mFilter2] Ability to use one field multiple times in filters.
- [mFilter2] Improved suggestions for more optimal processing.
- [mFilter2] Ability to set aliases for filters.
- [mFilter2] Aliases used for templates names.
- [mFilter2] Fixed suggestions for dates filters.
- [mFilter2] Fixed &showEmptyFilters in dates filters.

1.2.7 pl
==============
- [mFilter2] Fixed search with &parents parameter.

1.2.6 pl
==============
- [mSearch2] Improved simple search for additional bonuses.

1.2.5 pl
==============
- [#34] [mSearchForm] Fixed &autocomplete=`0`.

1.2.4 pl1
==============
- [mFilter2] Fixed adding new filters from build methods.
- [mFilter2] Fixed possible E_NOTICE.

1.2.3 pl2
==============
- [#33] [mFilter2] Fixed build of TVs filters.
- [mFilter2] Fixed limit on search.
- [mFilter2] Fixed displaying of empty filters on page.

1.2.2 pl
==============
- [mFilter2] Fixed display order of specified &filters.
- [Main] Removed register of jQuery on frontend.

1.2.1 pl
==============
- [mFilter2] Added support of "autotag" TVs.

1.2.0 pl
==============
- [mFilter2] Added triggering of jQuery event "mse2_load".
- [mFilter2] Added support of pdoTools 1.10.
- [mFilter2] Added filter "decimal".